examples/zle.out
warning: preprocess zle.tdf...
zle.tdf:3: at "(": syntax error
